# peripheral-bus

./: CMakeLists.txt
data/: pio_board_artik710.ini  pio_board_eagleye.ini  pio_board_rp3_b.ini  pio_board_rp3_b_12.ini  pio_board_techenxion_pico_imx7.ini
include/: peripheral_bus.h  peripheral_log.h
include/gdbus/: peripheral_gdbus_adc.h  peripheral_gdbus_gpio.h  peripheral_gdbus_i2c.h  peripheral_gdbus_pwm.h  peripheral_gdbus_spi.h  peripheral_gdbus_uart.h
include/handle/: peripheral_handle.h  peripheral_handle_adc.h  peripheral_handle_common.h  peripheral_handle_gpio.h  peripheral_handle_i2c.h  peripheral_handle_pwm.h  peripheral_handle_spi.h  peripheral_handle_uart.h
include/interface/: peripheral_interface_adc.h  peripheral_interface_common.h  peripheral_interface_gpio.h  peripheral_interface_i2c.h  peripheral_interface_pwm.h  peripheral_interface_spi.h  peripheral_interface_uart.h
include/util/: peripheral_board.h  peripheral_log.h  peripheral_privilege.h
packaging/: 90-gpio.rules  90-peripheral-io.rules  org.tizen.peripheral_io.conf  peripheral-bus.service  peripheral-bus.spec
src/: peripheral_bus.c  peripheral_bus_board.c  peripheral_bus_util.c  privilege_checker.c
src/daemon/: peripheral_bus.c  peripheral_bus.h  peripheral_bus_adc.c  peripheral_bus_board.c  peripheral_bus_gdbus_adc.c  peripheral_bus_gdbus_gpio.c  peripheral_bus_gdbus_i2c.c  peripheral_bus_gdbus_pwm.c  peripheral_bus_gdbus_spi.c  peripheral_bus_gdbus_uart.c  peripheral_bus_gpio.c  peripheral_bus_gpio.h  peripheral_bus_i2c.c  peripheral_bus_i2c.h  peripheral_bus_pwm.c  peripheral_bus_pwm.h  peripheral_bus_spi.c  peripheral_bus_spi.h  peripheral_bus_uart.c  peripheral_bus_uart.h  peripheral_bus_util.c  peripheral_bus_util.h  peripheral_common.h  peripheral_gdbus_pwm.c  peripheral_gdbus_spi.c  peripheral_handle_gpio.c  peripheral_handle_pwm.c  peripheral_io.xml  privilege_checker.c
src/daemon/include/: peripheral_bus.h  peripheral_bus_adc.h  peripheral_bus_board.h  peripheral_bus_gdbus_adc.h  peripheral_bus_gdbus_gpio.h  peripheral_bus_gdbus_i2c.h  peripheral_bus_gdbus_pwm.h  peripheral_bus_gdbus_spi.h  peripheral_bus_gdbus_uart.h  peripheral_bus_gpio.h  peripheral_bus_i2c.h  peripheral_bus_pwm.h  peripheral_bus_spi.h  peripheral_bus_uart.h  peripheral_bus_util.h  peripheral_gdbus_i2c.h  peripheral_gdbus_uart.h  peripheral_handle_uart.h  privilege_checker.h
src/gdbus/: peripheral_gdbus_adc.c  peripheral_gdbus_gpio.c  peripheral_gdbus_i2c.c  peripheral_gdbus_pwm.c  peripheral_gdbus_spi.c  peripheral_gdbus_uart.c
src/handle/: peripheral_handle_adc.c  peripheral_handle_common.c  peripheral_handle_gpio.c  peripheral_handle_i2c.c  peripheral_handle_pwm.c  peripheral_handle_spi.c  peripheral_handle_uart.c
src/interface/: adc.c  gpio.c  i2c.c  peripheral_interface_adc.c  peripheral_interface_gpio.c  peripheral_interface_i2c.c  peripheral_interface_pwm.c  peripheral_interface_spi.c  peripheral_interface_uart.c  pwm.c  spi.c  uart.c
src/interface/include/: adc.h  gpio.h  i2c.h  peripheral_interface_common.h  peripheral_interface_gpio.h  peripheral_interface_i2c.h  peripheral_interface_uart.h  pwm.h  spi.h  uart.h
src/util/: peripheral_board.c  peripheral_privilege.c
